minor spacing fix

--- a/worrystyle.css
+++ b/worrystyle.css
@@ -82,6 +82,7 @@ div {
 }
 
 .worry-toptext {
+    padding-top: 4px;
     font-family: Product Sans;
 }
 
